# WebScrapping

./: Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  unittest_test.py
src/pkg_web_scrapping/: app.py
src/pkg_web_scrapping/browser/: firefox_profile.py  firefox_webdriver.py
src/pkg_web_scrapping/browser/scrapping/: firefox_auth.py
src/webscrapping/authentication/: auth_google.py
src/webscrapping/webdriver/: firefox_driver.py  firefox_profile.py
tests/: pytest.ini  test_app.py  test_auth.py  test_browser.py  test_browser_auth.py
