[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_scrapping_test_pkg"
version = "0.0.1"
authors = [
  { name="Jorge Salhani", email="jorgesalhani@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-p no:cacheprovider -v"
testpaths = [
    "tests",
    "integration"
]